clusters/n8n-cluster/production/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
  labels:
    service: n8n
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5678"
    prometheus.io/path: "/metrics"
spec:
  selector:
    service: n8n
  ports:
    - name: http
      port: 80
      targetPort: 5678
  type: NodePort
